# test_fastapi_blog

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 23038ff1d3d7_rename_picture_field_to_image.py  27360866e5d8_initial.py  cfeb710bcb7e_add_tariff_to_user.py
compose/: Dockerfile  compose.yml  entrypoint.sh
src/: exceptions.py  main.py
src/api/: routers.py
src/api/endpoints/: __init__.py  article.py  category.py  user.py
src/core/: config.py  db.py  users.py
src/crud/: __init__.py  article.py  base.py  category.py
src/models/: __init__.py  article.py  base.py  user.py
src/schemas/: __init__.py  article.py  category.py  user.py
src/services/: __init__.py  email.py  minio.py  utils.py
src/services/celery/: tasks.py  worker.py
